# Timer2

./: .gitignore  README.md  _timer_2.spec  build_exe.bat  clock.py  const.py  functions.py  inform.py  precise_timer.py  pyproject.toml  requirements-dev.txt  requirements.txt  resources_rc.py  run_tests.bat  run_timer.py  timer_2.py  timer_2.spec  timer_2.ui  timer_3.spec  tunes.py  tunes.ui  tunes_defaults.py  tunes_dto.py  tunes_mapper.py  tunes_model.py  tunes_schema.py  tunes_storage.py
.github/workflows/: ci.yml
_internal/: timer_2.ui  tunes.ui
docs/: ARCHITECTURE.md  PORTFOLIO_REVIEW.md
examples/: settings.example.json
src/timer_2/: const.py  functions.py  inform.py  main.py  signals.py  tunes.py  tunes_storage.py
src/timer_3/: clock.py  const.py  functions.py  inform.py  main.py  signals.py  tune_key.py  tunes.py  tunes_defaults.py  tunes_mapper.py  tunes_model.py  tunes_storage.py
tests/: test_tune_key.py  test_tunes_defaults.py  test_tunes_mapper.py  test_tunes_mapper_extra.py  test_tunes_model.py  test_tunes_model_extra.py  test_tunes_storage.py
